fix: update text color in dark theme for better visibility

--- a/_sass/themes/_dark.scss
+++ b/_sass/themes/_dark.scss
@@ -7,7 +7,8 @@
   --main-border-color: rgb(44, 45, 45);
 
   /* Common color */
-  --text-color: rgb(175, 176, 177);
+  --text-color: rgb(180, 180, 180);
+  // --text-color: rgb(175, 176, 177);
   --text-muted-color: #868686;
   --text-muted-highlight-color: #aeaeae;
   --heading-color: #cccccc;
